--- a/src/Css/Aboutus.css
+++ b/src/Css/Aboutus.css
@@ -39,13 +39,13 @@
   align-items: center;
 }
 
-.logo1,
-.logo {
+.about-logo1,
+.about-logo {
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 15px;
 }
 
-.logo {
-  color: #18965f;
+.about-logo {
+  color: #e82f22;
 }
