--- a/src/Css/Complain.css
+++ b/src/Css/Complain.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  color: #ffffff;
 }
 .Complainform-container {
   max-width: 400px;
@@ -14,7 +15,6 @@
 }
 
 .register-button {
-  background-color: #ffffff;
   border: none;
   padding: 10px 20px;
   font-size: 16px;
@@ -37,7 +37,7 @@
   width: 100%;
   padding: 8px;
   font-size: 14px;
-  border: 2px solid #1ebe79;
+  /* border: 2px solid #1ebe79; */
   border-radius: 4px;
 }
 
@@ -47,8 +47,8 @@ p {
 }
 
 .next-button {
-  background-color: #1ebe79;
-  border: 2px solid #1ebe79;
+  background-color: #e82f22;
+  border: 2px solid #e82f22;
   padding: 8px 16px;
   cursor: pointer;
   font-size: 14px;
