--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  color: #ffffff;
 }
 
 .body-login {
@@ -13,7 +14,7 @@
 }
 
 .form-login {
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   padding: 30px;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -25,7 +26,6 @@
   text-align: center;
   font-size: 24px;
   margin-bottom: 20px;
-  color: #333;
 }
 
 .mb-3 {
@@ -36,22 +36,20 @@
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  color: #555;
+  color: #fffcfb;
 }
 
 .logform-control {
   width: 100%;
   padding: 10px;
-  border: 2px solid #18965f;
+  border: 2px solid #000000;
   border-radius: 4px;
   font-size: 16px;
-  color: #18965f;
 }
 
 .logform-control:focus {
-  border-color: #18965f;
+  border-color: #000000;
   outline: none;
-  box-shadow: 0 0 5px rgba(15, 168, 48, 0.5);
 }
 
 .remember-forgot {
@@ -61,7 +59,7 @@
 }
 
 #forgot {
-  color: #007bff;
+  color: #ffffff;
   text-decoration: none;
   font-size: 14px;
 }
@@ -71,8 +69,8 @@
 }
 
 .logbutton {
-  background-color: #1ebe79;
-  border: 2px solid #1ebe79;
+  background-color: #e82f22;
+  border: 2px solid #e82f22;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -84,8 +82,8 @@
 }
 
 .logbutton:hover {
-  background-color: #18965f;
-  border: 2px solid #18965f;
+  background-color: #c30d00;
+  /* border: 2px solid #e82f22; */
 }
 
 .account {
@@ -93,7 +91,7 @@
   text-align: center;
   margin-top: 15px;
   font-size: 14px;
-  color: #333;
+  /* color: #333; */
 }
 
 .sign {
