--- a/src/Css/Signin.css
+++ b/src/Css/Signin.css
@@ -14,7 +14,7 @@
 }
 
 .form-sign {
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   padding: 30px;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -26,7 +26,7 @@
   text-align: center;
   font-size: 24px;
   margin-bottom: 20px;
-  color: #333;
+  color: #fffdfd;
 }
 
 .m-3 {
@@ -37,28 +37,26 @@
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  color: #555;
+  color: #ffffff;
 }
 
 .form-control {
-  border: 2px solid #1ebe79;
+  border: 2px solid #000000;
   width: 100%;
   padding: 10px;
-  border: 2px solid #18965f;
   border-radius: 4px;
   font-size: 16px;
-  border-color: #18965f;
+  border-color: #000000;
 }
 
 .form-control:focus {
-  border-color: #18965f;
+  border-color: #e82f22;
   outline: none;
-  box-shadow: 0 0 5px rgba(15, 168, 48, 0.5);
 }
 
 .btn11 {
-  background-color: #1ebe79;
-  border: 2px solid #1ebe79;
+  background-color: #e82f22;
+  border: 2px solid #e82f22;
   padding: 10px 20px;
   border: none;
   color: #ffffff;
@@ -71,8 +69,8 @@
 }
 
 .btn11:hover {
-  background-color: #18965f;
-  border: 2px solid #18965f;
+  background-color: #e82f22;
+  border: 2px solid #e82f22;
 }
 
 .account1 {
@@ -80,11 +78,11 @@
   text-align: center;
   margin-top: 15px;
   font-size: 14px;
-  color: #333;
+  color: #ffffff;
 }
 
 .log {
-  color: #0a0a0a;
+  color: #ffffff;
   text-decoration: none;
 }
 
