--- a/src/Css/Aboutus.css
+++ b/src/Css/Aboutus.css
@@ -1,6 +1,12 @@
+* {
+  margin: 0;
+  margin-bottom: 0;
+}
+
 .about-us-container {
   padding: 20px;
   padding-left: 50px;
+  min-height: 50vh;
 }
 
 .heading-container {
