--- a/src/Css/Complain.css
+++ b/src/Css/Complain.css
@@ -6,7 +6,8 @@
 }
 .Complainform-container {
   max-width: 400px;
-  margin: 15% auto;
+  margin: auto;
+  margin-top: 9%;
   padding: 20px 20px 20px 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
