--- a/src/Css/Contact.css
+++ b/src/Css/Contact.css
@@ -1,8 +1,11 @@
 * {
+  margin: 0;
+  padding: 0%;
   color: #ffffff;
 }
 
 .contact-container {
+  /* margin-top: 5%; */
   font-family: Arial, sans-serif;
   margin-top: 100px;
   padding: 10px;
@@ -14,7 +17,6 @@
 
 .contact-title {
   background-color: #0e2f3c;
-  /* color: white; */
   padding: 30px;
   border-radius: 5px;
   margin-bottom: 20px;
