--- a/src/Css/Footer.css
+++ b/src/Css/Footer.css
@@ -5,16 +5,14 @@
 }
 
 .page-container {
+  margin-top: 6.6%;
   display: flex;
   flex-direction: column;
-
-  min-height: 100vh;
 }
 
 .content {
-  flex: 2;
-  /* padding: 20px; */
-  margin-top: 0;
+  flex: 1;
+  padding: 20px;
 }
 
 .footer {
@@ -23,8 +21,7 @@
   color: #000000;
   padding: 20px 50px;
   font-size: 14px;
-  flex-shrink: 0;
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 6px 15px rgba(210, 207, 207, 0.25);
 }
 
 .footer-section {
