--- a/src/Css/Aboutus.css
+++ b/src/Css/Aboutus.css
@@ -1,16 +1,9 @@
-* {
-  margin: 0;
-  margin-bottom: 0;
-}
-
 .about-us-container {
   padding: 20px;
   padding-left: 50px;
-  min-height: 50vh;
 }
 
 .heading-container {
-  text-align: left;
   margin-bottom: 100px;
 }
 
@@ -35,18 +28,19 @@
 }
 
 .about-us-image {
-  width: 50%;
+  width: 40%;
   height: auto;
   border-radius: 8px;
 }
 
-.logo-container {
+.about-logo-container {
   display: flex;
   align-items: center;
 }
 
 .about-logo1,
 .about-logo {
+  text-align: center;
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 15px;
@@ -54,7 +48,4 @@
 
 .about-logo {
   color: #e82f22;
-}
-p {
-  font-weight: 105;
 }
