--- a/src/Css/Navbar.css
+++ b/src/Css/Navbar.css
@@ -2,9 +2,8 @@
   padding: 0;
   margin: 0;
   background-color: #0e2f3c;
-  font-family: sans-serif;
-  /* color: #fbfdfd; Text */
-  /* background-color: #ef1105; button*/
+  font-family: DM Sans;
+  text-decoration: none;
 }
 .navbar {
   width: 100%;
@@ -15,7 +14,7 @@
   align-items: center;
   background-color: #0e2f3c;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 0 30px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
@@ -55,7 +54,6 @@
   color: rgb(255, 249, 249);
   font-weight: bold;
   cursor: pointer;
-  text-decoration: underline;
 }
 
 .nav-links li:hover {
@@ -86,4 +84,33 @@
   background-color: #ffffff;
   border: 2px solid #ef1105;
   color: #ef1105;
+}
+
+@media screen and (max-width: 800px) {
+  .nav-links, .auth-btns {
+    display: none; 
+  }
+
+  .hamburger-menu {
+    display: block; 
+  }
+  .menu-icon, .cross-icon{
+    width: 44px;
+    height: 44px;
+    background: var(--Frame, #0E2F3C);
+    color: white;
+    padding: 4px;
+    border-radius: 3px;
+  }
+
+  .menu-icon:hover {
+    color: rgb(118, 120, 122); 
+    cursor: pointer; 
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .hamburger-menu {
+    display: none; 
+  }
 }
