--- a/src/Css/Complain.css
+++ b/src/Css/Complain.css
@@ -1,18 +1,18 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: DM Sans;
   color: #ffffff;
 }
 .Complainform-container {
   max-width: 400px;
   margin: auto;
-  margin-top: 9%;
+  margin-top: 180px ;
+  margin-bottom: 140px ;
   padding: 20px 20px 20px 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
   text-align: center;
-  font-family: Arial, sans-serif;
 }
 
 .register-button {
@@ -56,4 +56,10 @@ p {
   color: white;
   border-radius: 4px;
   font-weight: bold;
+}
+
+@media screen and (max-width:800px) {
+  .Complainform-container {
+    max-width: 300px; 
+  }
 }
