--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -2,7 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: DM Sans;
   color: #ffffff;
 }
 
@@ -45,6 +45,8 @@
   border: 2px solid #000000;
   border-radius: 4px;
   font-size: 16px;
+  border-radius: 10px;
+  background-color: white;
 }
 
 .logform-control:focus {
@@ -79,6 +81,7 @@
   font-size: 16px;
   cursor: pointer;
   margin-top: 10px;
+  border-radius: 10px;
 }
 
 .logbutton:hover {
@@ -107,7 +110,7 @@
   justify-content: right;
   justify-items: right;
 }
-@media (max-width: 576px) {
+@media (max-width: 800px) {
   .form-login {
     padding: 20px;
   }
