--- a/src/Css/Profile.css
+++ b/src/Css/Profile.css
@@ -3,7 +3,7 @@
   margin-left: 35%;
   padding: 20px;
   max-width: 400px;
-  font-family: Arial, sans-serif;
+  font-family: DM Sans;
   border: 1px solid #ccc; /* Optional border */
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
