--- a/src/Css/Signin.css
+++ b/src/Css/Signin.css
@@ -2,7 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: DM Sans;
 }
 
 .body-signin {
@@ -46,10 +46,12 @@
   border-radius: 4px;
   font-size: 16px;
   border-color: #000000;
+  border-radius: 10px;
+  background-color: white;
+  color: black;
 }
 
 .btn11 {
-  background-color: #e82f22;
   border: 2px solid #e82f22;
   padding: 10px 20px;
   border: none;
@@ -60,6 +62,8 @@
   font-size: 16px;
   cursor: pointer;
   margin-top: 10px;
+  border-radius: 10px;
+  background-color: #e82f22;
 }
 
 .btn11:hover {
