--- a/src/Css/Signin.css
+++ b/src/Css/Signin.css
@@ -16,7 +16,7 @@
 .form-sign {
   padding: 30px;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
   max-width: 400px;
   width: 100%;
 }
@@ -40,12 +40,12 @@
 }
 
 .form-control {
-  border: 2px solid #000000;
+  border: 2px solid #ffffff;
   width: 100%;
   padding: 10px;
   border-radius: 4px;
   font-size: 16px;
-  border-color: #000000;
+  /* border-color: #000000; */
 }
 
 .btn11 {
