--- a/src/Scss/forgot.css
+++ b/src/Scss/forgot.css
@@ -4,22 +4,26 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #ffffff;
+  background-color: #0e2f3c;
   padding: 20px;
 }
 
 .password-reset-title {
   font-size: 2rem;
-  color: #333;
+  color: #ffffff;
   margin-bottom: 20px;
 }
 
 .password-input {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 400px;
   padding: 12px;
   margin-bottom: 15px;
-  border: 2px solid #18965f;
-  border-radius: 5px;
   font-size: 1rem;
+  border-radius: 5px;
+  border: 2px solid rgb(123, 123, 123);
 }
 
 .password-reset-form {
@@ -30,14 +34,21 @@
 }
 
 .submit-button {
+  width: 100%;
+  max-width: 400px;
   padding: 15px 15px 15px 15px;
   font-weight: bold;
   display: flex;
-  border-radius: 5px;
-  border: 2px solid #18965f;
-  background-color: #18965f;
-  color: #ffffff;
+  background-color: #a02219;
   font-weight: bold;
   align-content: center;
+  border: 2px solid #a02219;
+  border-radius: 5px;
   justify-content: center;
+}
+
+.btn {
+  display: flex;
+  margin-bottom: 5px;
+  margin-left: 30%;
 }/*# sourceMappingURL=forgot.css.map */
