--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -17,7 +17,6 @@
   /* background-color: #ffffff; */
   padding: 30px;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 400px;
   width: 100%;
 }
@@ -43,7 +42,6 @@
   width: 100%;
   padding: 10px;
   border: 2px solid #ffffff;
-  border-radius: 4px;
   font-size: 16px;
   border-radius: 10px;
   background-color: white;
@@ -106,9 +104,7 @@
   text-decoration: underline;
 }
 .eyebutton {
-  text-align: right;
-  justify-content: right;
-  justify-items: right;
+  margin: -35px;
 }
 @media (max-width: 800px) {
   .form-login {
