--- a/src/Css/Signin.css
+++ b/src/Css/Signin.css
@@ -1,4 +1,3 @@
-/* Signin.css */
 * {
   margin: 0;
   padding: 0;
@@ -9,14 +8,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - 70px);
   margin-top: 79px;
 }
 
 .form-sign {
   padding: 30px;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
   max-width: 400px;
   width: 100%;
 }
@@ -42,10 +39,12 @@
 .form-control {
   border: 2px solid #ffffff;
   width: 100%;
+
   padding: 10px;
   border-radius: 4px;
   font-size: 16px;
-  border-color: #000000;
+  border-radius: 10px;
+  background-color: white;
 }
 
 .btn11 {
@@ -83,7 +82,9 @@
 .log:hover {
   text-decoration: underline;
 }
-
+.btneye {
+  margin: -34px;
+}
 @media (max-width: 576px) {
   .form-sign {
     padding: 20px;
