Style: Improved login form CSS

--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -41,6 +41,7 @@
 .logform-control {
   width: 100%;
   padding: 10px;
+  color: black;
   border: 2px solid #ffffff;
   font-size: 16px;
   border-radius: 10px;
