--- a/src/Css/Signin.css
+++ b/src/Css/Signin.css
@@ -39,7 +39,7 @@
 .form-control {
   border: 2px solid #ffffff;
   width: 100%;
-
+  color: black;
   padding: 10px;
   border-radius: 4px;
   font-size: 16px;
