--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -1,9 +1,14 @@
-/* Login.css */
+:root {
+  --primarycolor: #0e2f3c;
+  --fontcolor: #ba0000;
+  --font-family: DM Sans;
+  --inputbg: #ffffff;
+  --buttoncolor: #e82f22;
+  --buttonhover: #c30d00;
+}
 * {
   margin: 0;
   padding: 0;
-  font-family: DM Sans;
-  color: #ffffff;
 }
 
 .body-login {
@@ -14,7 +19,6 @@
 }
 
 .form-login {
-  /* background-color: #ffffff; */
   padding: 30px;
   border-radius: 8px;
   max-width: 400px;
@@ -35,7 +39,7 @@
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  color: #fffcfb;
+  color: var(--fontcolor);
 }
 
 .logform-control {
@@ -45,7 +49,7 @@
   border: 2px solid #ffffff;
   font-size: 16px;
   border-radius: 10px;
-  background-color: white;
+  background-color: var(--inputbg);
 }
 
 /* .logform-control:focus {
@@ -60,7 +64,7 @@
 }
 
 #forgot {
-  color: #ffffff;
+  color: var(--inputback);
   text-decoration: none;
   font-size: 14px;
 }
@@ -70,8 +74,8 @@
 }
 
 .logbutton {
-  background-color: #e82f22;
-  border: 2px solid #e82f22;
+  background-color: var(--buttoncolor);
+  border: 2px solid var(--buttoncolor);
   color: white;
   padding: 10px 20px;
   border: none;
@@ -84,7 +88,7 @@
 }
 
 .logbutton:hover {
-  background-color: #c30d00;
+  background-color: var(--buttonhover);
   /* border: 2px solid #e82f22; */
 }
 
@@ -93,7 +97,6 @@
   text-align: center;
   margin-top: 15px;
   font-size: 14px;
-  /* color: #333; */
 }
 
 .sign {
