--- a/src/Css/Navbar.css
+++ b/src/Css/Navbar.css
@@ -12,7 +12,7 @@
   top: 0;
   display: flex;
   align-items: center;
-  background-color: #0e2f3c;
+  /* background-color: #0e2f3c; */
   justify-content: space-between;
   padding: 0 30px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
