--- a/src/Scss/forgot.scss
+++ b/src/Scss/forgot.scss
@@ -21,6 +21,8 @@ $border: 2px solid #a02219;
 }
 .password-input {
   display: flex;
+  justify-content: flex-end;
+
   flex-direction: column;
   width: 100%;
   max-width: 400px;
