--- a/src/Css/Complain.css
+++ b/src/Css/Complain.css
@@ -9,21 +9,22 @@
   /* max-height: 700vh; */
   max-width: 400px;
   margin: auto;
-  margin-top: 180px ;
-  margin-bottom: 140px ;
+  margin-top: 180px;
+  margin-bottom: 140px;
   padding: 20px 20px 20px 20px;
   border: 1px solid #ccc;
   border-radius: 8px;
   text-align: center;
 }
 
-.register-button {
+.register-h2 {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
   border-radius: 4px;
   margin-bottom: 20px;
+  color: #ffffff;
 }
 
 .form-group {
@@ -60,8 +61,8 @@ p {
   font-weight: bold;
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width: 800px) {
   .Complainform-container {
-    max-width: 300px; 
+    max-width: 300px;
   }
 }
