--- a/src/Css/Complain.css
+++ b/src/Css/Complain.css
@@ -7,24 +7,28 @@
 
 .Complainform-container {
   /* max-height: 700vh; */
+
   max-width: 400px;
   margin: auto;
   margin-top: 180px;
   margin-bottom: 140px;
   padding: 20px 20px 20px 20px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   border-radius: 8px;
+  width: 380;
+  height: 50;
+  /* background: whsite; */
+  border-radius: 10;
   text-align: center;
 }
 
-.register-h2 {
+.register-button {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
   border-radius: 4px;
   margin-bottom: 20px;
-  color: #ffffff;
 }
 
 .form-group {
@@ -32,9 +36,33 @@
 }
 
 .label1 {
-  display: block;
+  width: 100%;
+  height: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: #ffffff;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 10;
+  display: inline-flex;
+  color: #000000;
+  font-size: 20;
+  font-family: DM Sans;
+  font-weight: 900;
+  line-height: 22px;
+  word-wrap: break-word;
+  border: 1px solid #ffffff;
+  /* display: block;
   margin-bottom: 8px;
   font-weight: bold;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: inline-flex; */
 }
 
 .type {
@@ -51,14 +79,26 @@ p {
 }
 
 .next-button {
-  background-color: #e82f22;
-  border: 2px solid #e82f22;
-  padding: 8px 16px;
-  cursor: pointer;
-  font-size: 14px;
-  color: white;
-  border-radius: 4px;
-  font-weight: bold;
+  width: 100%;
+  height: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: #a42a24;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 10;
+  display: inline-flex;
+
+  color: #fbfdfd;
+  font-size: 20;
+  font-family: DM Sans;
+  font-weight: 900;
+  line-height: 22px;
+  word-wrap: break-word;
+  border: 1px solid #a42a24;
 }
 
 @media screen and (max-width: 800px) {
