--- a/src/Css/Contact.css
+++ b/src/Css/Contact.css
@@ -26,7 +26,7 @@
   /* background-color: white; */
   padding: 80px;
   border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(253, 252, 252, 0.1);
+  /* box-shadow: 0 2px 4px rgba(253, 252, 252, 0.1); */
 }
 
 .contact-card h3 {
