--- a/Admin/src/Css/dashboard.css
+++ b/Admin/src/Css/dashboard.css
@@ -29,6 +29,13 @@
   gap: 20px;
   margin-top: 20px;
 }
+.card-container1 {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+}
 
 .card {
   background-color: white;
