--- a/Admin/src/Css/UserManagement.css
+++ b/Admin/src/Css/UserManagement.css
@@ -25,7 +25,8 @@
   border-radius: 10px;
   width: 300px;
   padding: 8px 12px;
-  border: 1px solid #b0c4c9;
+  outline: none;
+  border: 1px solid #000000;
   border-radius: 5px;
   margin: 15px 15px 10px 10px;
   font-size: 16px;
