--- a/Admin/src/Css/Login.css
+++ b/Admin/src/Css/Login.css
@@ -11,16 +11,15 @@
   padding: 0;
 }
 
-.log-body-login {
+.body-login {
   background-color: var(--primarycolor);
   display: flex;
   justify-content: center;
-
   align-items: center;
   min-height: 100vh;
 }
 
-.log-form-login {
+.form-login {
   padding: 30px;
   border-radius: 8px;
   max-width: 400px;
@@ -33,18 +32,18 @@
   margin-bottom: 20px;
 }
 
-.log-mb-3 {
+.mb-3 {
   margin-bottom: 15px;
 }
 
-.log-form-label {
+.form-label {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
   color: var(--fontcolor);
 }
 
-.log-form-control {
+.logform-control {
   width: 100%;
   outline: none;
   padding: 10px;
@@ -55,8 +54,7 @@
   background-color: var(--inputbg);
 }
 
-.log-remember-forgot {
-  margin-top: 15px;
+.remember-forgot {
   display: flex;
   justify-content: flex-end;
   margin-bottom: 10px;
@@ -88,9 +86,10 @@
 
 .logbutton:hover {
   background-color: var(--buttonhover);
+  /* border: 2px solid #e82f22; */
 }
 
-.account1 {
+.account {
   display: block;
   text-align: center;
   margin-top: 15px;
