--- a/frontend/src/Css/Changepass.css
+++ b/frontend/src/Css/Changepass.css
@@ -5,6 +5,7 @@
   --inputbg: #ffffff;
   --buttoncolor: #e82f22;
   --buttonhover: #c30d00;
+  --family--: Arial, sans-serif;
 }
 
 * {
@@ -14,81 +15,21 @@
 
 .form-password {
   gap: 20px;
-
   display: flex;
   flex-direction: column;
-  /* align-items: center;
-  justify-content: center; */
   min-height: 100vh;
   background-color: var(--primarycolor);
   padding: 20px;
-  font-family: "Arial", sans-serif;
-}
-/*
-h2 {
-  color: white;
-  font: 16;
-  font-family: DM Sans;
-  font-weight: 600;
-  word-wrap: break-word;
 }
 
 .form-password {
-  background-color: var(--primarycolor);
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 400px;
-  background: var(--inputbg);
-  padding: 20px;
-  border-radius: 8px;
-  border: 1px solid var(--inputbg);
-}
-
-.label-pass {
-  font-size: 0.9rem;
-  color: var(--fontcolor);
-  margin-bottom: 8px;
-  font-weight: bold;
-}
-
-.input-pass {
-  background-color: var(--inputbg);
-
-  padding: 10px;
-  font-size: 1rem;
-  margin-bottom: 15px;
-  border: 1px solid var(--inputbg);
-  border-radius: 5px;
-}
-
-button {
-  padding: 10px 15px;
-  font-size: 1rem;
-  background: var(--buttoncolor);
-  border: 1px solid var(--inputbg);
-  border-radius: 5px;
-}
-
-button:hover {
-  background-color: var(--buttonhover);
-}
- .label-pass {
-  color: white;
-  font-size: 16;
-  font-family: DM Sans;
-  font-weight: 600;
-  word-wrap: break-word;
-} 
- */
-.form-password {
+  background-color: #0e2f3c;
   justify-content: center;
   align-items: center;
 }
 .input-pass {
   padding: 10px;
   outline: none;
-  /* padding: auto; */
   width: 100%;
   height: 100%;
   justify-content: center;
@@ -97,10 +38,16 @@ button:hover {
   width: 380px;
   height: 50px;
   border: 1px solid #ccc;
-
   color: black;
   background: white;
   border-radius: 10px;
+}
+.profile-header1 {
+  margin-right: 10rem;
+  margin-top: 5em;
+  gap: 1rem;
+  margin-bottom: 20px;
+  text-align: center;
 }
 .btnn {
   width: 100%;
@@ -126,4 +73,15 @@ button:hover {
   font-weight: 900;
   line-height: 22px;
   word-wrap: break-word;
+}
+.back-button1 {
+  background: none;
+  border: none;
+  color: #ffffff;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.back-button1:hover {
+  color: #ff4c4c;
 }
