--- a/frontend/src/Css/Profile.css
+++ b/frontend/src/Css/Profile.css
@@ -1,84 +1,83 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-.inputt {
-  cursor: pointer;
-
-  display: flex;
-  flex-direction: column;
-  width: 380px;
-  height: 100%;
-  height: 48px;
-  padding: 20px;
-  background: #ffffff;
-  border: 2px solid #ffffff;
-  color: black;
-  font-size: large;
-  border-radius: 10px;
-  gap: 10px;
-}
 .profile-page {
+  color: #fff;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  max-width: 600px;
-  margin: 50px auto;
+  align-items: center;
+  font-family: Arial, sans-serif;
   padding: 20px;
-  background-color: #0e2f3c;
-  border-radius: 10px;
+  margin-top: 95px;
+  position: relative;
+}
+
+.profile-header {
+  margin-right: 14rem;
+  gap: 1rem;
+  margin-bottom: 20px;
   text-align: center;
 }
 
-.profile h2 {
-  font-size: 28px;
+.back-button {
+  background: none;
+  border: none;
   color: #ffffff;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
+  font-size: 24px;
+  cursor: pointer;
+  /* top: 20px;
+  left: 20px; */
+}
+
+.back-button:hover {
+  color: #ff4c4c;
+}
+
+h2 {
+  margin: 0;
+  font-size: 24px;
 }
 
 .user-detail-card {
-  padding: 20px;
+  border-radius: 8px;
+  padding: 30px;
   display: flex;
   flex-direction: column;
-  background-color: #0e2f3c;
-  border-radius: 8px;
+  gap: 20px;
+  max-width: 400px;
+  width: 100%;
+  text-align: left; /* Ensures alignment of labels and fields */
 }
 
-.user-detail-card p {
+.profile-field {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
   font-size: 16px;
-  color: #fffefe;
-  margin: 10px 0;
-  line-height: 1.5;
+  margin-bottom: 5px;
+  color: #d1e8ff;
 }
-.labell {
-  width: 380px;
-  height: 100%;
-  height: 48px;
-  margin-left: 15%;
 
-  /* gap: 20px; */
+.inputt {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #f0f0f0;
+  color: #333;
+  font-size: 14px;
+  text-align: center;
+}
+
+.inputt:read-only {
+  background-color: #e6e6e6;
 }
 
 .loading-spinner {
-  text-align: center;
-  color: #666666;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
   font-size: 18px;
-  margin-top: 50px;
-}
-
-@media (max-width: 768px) {
-  .profile {
-    margin: 20px;
-    padding: 15px;
-  }
-
-  .user-detail-card p {
-    font-size: 14px;
-  }
-
-  .profile h2 {
-    font-size: 24px;
-  }
+  color: #fff;
+  text-align: center;
 }
