--- a/frontend/src/Css/forgot.css
+++ b/frontend/src/Css/forgot.css
@@ -5,6 +5,24 @@
   min-height: 100vh;
   flex-direction: column;
 }
+.profile-header1 {
+  margin-right: 10rem;
+  margin-top: 5rem;
+  gap: 1rem;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.back-button1 {
+  background: none;
+  border: none;
+  color: #ffffff;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.back-button1:hover {
+  color: #ff4c4c;
+}
 
 .div-verification {
   display: flex;
@@ -13,13 +31,15 @@
   border-radius: 8px;
   max-width: 400px;
   width: 100%;
-  margin-bottom: 95px;
 }
 .iconnn {
   font-size: 24px;
   color: #ffffff;
   cursor: pointer;
   position: absolute;
+}
+.icon-forgot {
+  margin-bottom: 5rem;
 }
 
 .titlle {
@@ -63,4 +83,21 @@
 .forgot-button:hover {
   background-color: var(--buttonhover);
   /* border: 2px solid #e82f22; */
+}
+
+@media (max-width: 768px) {
+  .profile-header1 {
+    margin-right: 10rem;
+    /* margin-top: 5rem; */
+    gap: 1rem;
+    /* margin-bottom: 20px; */
+    text-align: center;
+  }
+  .back-button1 {
+    background: none;
+    border: none;
+    color: #ffffff;
+    font-size: 24px;
+    cursor: pointer;
+  }
 }
